@@ -38,6 +38,56 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|queries
+operator|.
+name|function
+operator|.
+name|FunctionQuery
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|queries
+operator|.
+name|function
+operator|.
+name|ValueSource
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|queries
+operator|.
+name|function
+operator|.
+name|valuesource
+operator|.
+name|QueryValueSource
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|queryparser
 operator|.
 name|classic
@@ -68,9 +118,27 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|util
+name|search
 operator|.
-name|BytesRef
+name|grouping
+operator|.
+name|AbstractAllGroupHeadsCollector
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|grouping
+operator|.
+name|TermAllGroupHeadsCollector
 import|;
 end_import
 
@@ -84,21 +152,7 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|CharsRef
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|UnicodeUtil
+name|*
 import|;
 end_import
 
@@ -1062,15 +1116,220 @@ block|}
 block|}
 block|}
 comment|// get the new base docset for this facet
+name|DocSet
 name|base
-operator|=
+init|=
 name|searcher
 operator|.
 name|getDocSet
 argument_list|(
 name|qlist
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rb
+operator|.
+name|grouping
+argument_list|()
+operator|&&
+name|rb
+operator|.
+name|getGroupingSpec
+argument_list|()
+operator|.
+name|isTruncateGroups
+argument_list|()
+condition|)
+block|{
+name|Grouping
+name|grouping
+init|=
+operator|new
+name|Grouping
+argument_list|(
+name|searcher
+argument_list|,
+literal|null
+argument_list|,
+name|rb
+operator|.
+name|getQueryCommand
+argument_list|()
+argument_list|,
+literal|false
+argument_list|,
+literal|0
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rb
+operator|.
+name|getGroupingSpec
+argument_list|()
+operator|.
+name|getFields
+argument_list|()
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+name|grouping
+operator|.
+name|addFieldCommand
+argument_list|(
+name|rb
+operator|.
+name|getGroupingSpec
+argument_list|()
+operator|.
+name|getFields
+argument_list|()
+index|[
+literal|0
+index|]
+argument_list|,
+name|req
+argument_list|)
 expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|rb
+operator|.
+name|getGroupingSpec
+argument_list|()
+operator|.
+name|getFunctions
+argument_list|()
+operator|.
+name|length
+operator|>
+literal|0
+condition|)
+block|{
+name|grouping
+operator|.
+name|addFunctionCommand
+argument_list|(
+name|rb
+operator|.
+name|getGroupingSpec
+argument_list|()
+operator|.
+name|getFunctions
+argument_list|()
+index|[
+literal|0
+index|]
+argument_list|,
+name|req
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|this
+operator|.
+name|base
+operator|=
+name|base
+expr_stmt|;
+return|return;
+block|}
+name|AbstractAllGroupHeadsCollector
+name|allGroupHeadsCollector
+init|=
+name|grouping
+operator|.
+name|getCommands
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|createAllGroupCollector
+argument_list|()
+decl_stmt|;
+name|searcher
+operator|.
+name|search
+argument_list|(
+operator|new
+name|MatchAllDocsQuery
+argument_list|()
+argument_list|,
+name|base
+operator|.
+name|getTopFilter
+argument_list|()
+argument_list|,
+name|allGroupHeadsCollector
+argument_list|)
+expr_stmt|;
+name|int
+name|maxDoc
+init|=
+name|searcher
+operator|.
+name|maxDoc
+argument_list|()
+decl_stmt|;
+name|FixedBitSet
+name|fixedBitSet
+init|=
+name|allGroupHeadsCollector
+operator|.
+name|retrieveGroupHeads
+argument_list|(
+name|maxDoc
+argument_list|)
+decl_stmt|;
+name|long
+index|[]
+name|bits
+init|=
+name|fixedBitSet
+operator|.
+name|getBits
+argument_list|()
+decl_stmt|;
+name|this
+operator|.
+name|base
+operator|=
+operator|new
+name|BitDocSet
+argument_list|(
+operator|new
+name|OpenBitSet
+argument_list|(
+name|bits
+argument_list|,
+name|bits
+operator|.
+name|length
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|this
+operator|.
+name|base
+operator|=
+name|base
+expr_stmt|;
+block|}
 block|}
 block|}
 comment|/**    * Looks at various Params to determing if any simple Facet Constraint count    * computations are desired.    *    * @see #getFacetQueryCounts    * @see #getFacetFieldCounts    * @see #getFacetDateCounts    * @see #getFacetRangeCounts    * @see FacetParams#FACET    * @return a NamedList of Facet Count info or null    */
