@@ -1770,6 +1770,159 @@ argument_list|,
 literal|"/facet_counts=={'facet_queries':{},'facet_fields':{'value3_s1':['a',1,'b',1]},'facet_dates':{},'facet_ranges':{}}"
 argument_list|)
 expr_stmt|;
+comment|// Multi select facets AND group.truncate=true
+name|req
+operator|=
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.field"
+argument_list|,
+literal|"value4_i"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet.field"
+argument_list|,
+literal|"{!ex=v}value3_s1"
+argument_list|,
+literal|"group.truncate"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=v}value3_s1:b"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|,
+literal|"/grouped=={'value4_i':{'matches':2,'groups':[{'groupValue':2,'doclist':{'numFound':2,'start':0,'docs':[{'id':'3'}]}}]}}"
+argument_list|,
+literal|"/facet_counts=={'facet_queries':{},'facet_fields':{'value3_s1':['a',1,'b',1]},'facet_dates':{},'facet_ranges':{}}"
+argument_list|)
+expr_stmt|;
+comment|// Multi select facets AND group.truncate=false
+name|req
+operator|=
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.field"
+argument_list|,
+literal|"value4_i"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet.field"
+argument_list|,
+literal|"{!ex=v}value3_s1"
+argument_list|,
+literal|"group.truncate"
+argument_list|,
+literal|"false"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=v}value3_s1:b"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|,
+literal|"/grouped=={'value4_i':{'matches':2,'groups':[{'groupValue':2,'doclist':{'numFound':2,'start':0,'docs':[{'id':'3'}]}}]}}"
+argument_list|,
+literal|"/facet_counts=={'facet_queries':{},'facet_fields':{'value3_s1':['a',3,'b',2]},'facet_dates':{},'facet_ranges':{}}"
+argument_list|)
+expr_stmt|;
+comment|// Multi select facets AND group.truncate=true
+name|req
+operator|=
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.func"
+argument_list|,
+literal|"sub(value4_i,1)"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"facet.field"
+argument_list|,
+literal|"{!ex=v}value3_s1"
+argument_list|,
+literal|"group.truncate"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=v}value3_s1:b"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|,
+literal|"/grouped=={'sub(value4_i,1)':{'matches':2,'groups':[{'groupValue':1.0,'doclist':{'numFound':2,'start':0,'docs':[{'id':'3'}]}}]}}"
+argument_list|,
+literal|"/facet_counts=={'facet_queries':{},'facet_fields':{'value3_s1':['a',1,'b',1]},'facet_dates':{},'facet_ranges':{}}"
+argument_list|)
+expr_stmt|;
 block|}
 DECL|field|f
 specifier|static
